# Commissioning

./: CMakeLists.txt  README.md
DataDistribution/: clean.sh  o2-raw-file-reader-workflow.ini  o2-raw-file-reader-workflow_sim.ini  rawReaderFile.sh  readout_replay.cfg  readout_rorc.cfg  readout_sim.cfg  rorc_datadist.cfg  startBkgChain.sh  startBridge.sh  startChain.sh  startCompressor.sh  startCompressorQC.sh  startReadout.sh  startStfBuilder.sh  startStfSender.sh  tofcompressed.json
QC/Digits/: .gitignore  clean.sh  digitize.sh  runqc.sh  simulate.sh
QC/RawCompressed/: .gitignore  README.md  init.sh  rawReaderFile.sh  runInspector.sh  runQC.sh  runQCdiagnostics.sh
QC/RawCompressed/DATA/: getdata.sh
RAW/: CMakeLists.txt
RAW/src/: CMakeLists.txt  file-proxy.cc  input-proxy.hh  reader-proxy.cc  scl-proxy.cc  writer-proxy.cc
RAW/utils/: epn2raw.cc  epn2raw.sh
cmake/: FindAliceO2.cmake  Findtofbuf.cmake
